devtools/client/netmonitor/src/assets/styles/RequestBlockingPanel.css
.network-monitor .request-blocking-panel {
  overflow: hidden;
  position: relative;
  height: 100%;
}


.request-blocking-panel .devtools-checkbox-label {
  display: inline-flex;
  align-items: center;
  gap: 4px;
  margin: 0;
  padding: 2px 4px;
  
  line-height: 16px;
  user-select: none;
  cursor: default;
}

.request-blocking-panel .devtools-checkbox-label > input {
  flex: none;
  margin: 0;
}

.request-blocking-label {
  flex: 1 1 auto;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.request-blocking-editable-label {
  cursor: text
}


.network-monitor .request-blocking-enable-bar {
  background: var(--theme-tab-toolbar-background);
  height: calc(var(--theme-toolbar-height) + 1px);
  padding-block: 2px;
  padding-inline: 16px 4px;
  display: flex;
  align-items: center;
  overflow: hidden;
  white-space: nowrap;
  border-bottom: 1px solid var(--theme-splitter-color);
}

.network-monitor .request-blocking-list.disabled {
  background-color: var(--theme-toolbar-hover);
  opacity: 0.6;
}

.network-monitor .request-blocking-enable-form {
  flex-grow: 1;
}

.network-monitor .request-blocking-enable-bar button::before {
  background-image: url("chrome://devtools/skin/images/add.svg");
}

.request-blocking-contents {
  position: absolute;
  bottom: 0;
  top: calc(var(--theme-toolbar-height) + 1px);
  inset-inline: 0;
  overflow-y: auto;
}


.network-monitor .request-blocking-list {
  margin: 0;
  padding: 4px 0;
  width: 100%;
}

.network-monitor .request-blocking-list li {
  display: flex;
  align-items: center;
  min-height: 20px;
  padding-inline: 16px 8px;
}

.network-monitor .request-blocking-list li.request-blocking-edit-item {
  padding: 0;
  
  margin-block: -2px;
}

.request-blocking-list .devtools-checkbox-label {
  flex: 1 1 auto;
  



  max-width: calc(100% - 20px);
  font-family: var(--monospace-font-family);
}

.request-blocking-remove-button {
  
  opacity: 0;
  flex: none;
  width: 20px;
  height: 20px;
  margin: 0;
  padding: 2px;
  border: none;
  outline: none;
  background-color: transparent;
}

.request-blocking-remove-button::-moz-focus-inner {
  border: none;
}

.request-blocking-list li:hover .request-blocking-remove-button,
.request-blocking-list li:focus-within .request-blocking-remove-button {
  opacity: 1;
}

.request-blocking-remove-button::before {
  content: "";
  display: block;
  width: 16px;
  height: 16px;
  border-radius: 2px;
  background: url("chrome://devtools/skin/images/close.svg") no-repeat center;
  background-size: 12px;
  -moz-context-properties: fill;
  fill: var(--theme-icon-color);
}

.request-blocking-remove-button:hover::before,
.request-blocking-remove-button:focus::before {
  fill: var(--theme-selection-color);
  background-color: var(--theme-selection-background);
}


.request-blocking-edit-item form {
  width: 100%;
}

.request-blocking-add-form {
  border-top: 1px solid var(--theme-splitter-color);
  border-bottom: 1px solid var(--theme-splitter-color);
}

.request-blocking-add-form:first-child {
  border-top: none;
}

.request-blocking-add-form input,
.request-blocking-edit-item input {
  width: calc(100% - 1px);
  height: 24px;
  padding-block: 4px;
  padding-inline: 20px 8px;
  background: none;
}

