Bug 1592243 - Fix diacritics truncation in network blocking panel r=Honza
The use of `--monospace-font-family` on Windows truncated the bottom
 part of diacritics in Network Blocking Panel.
 Using the default variable-width font not only fixes this issue but
 also allows user to view more characters per line which is especially
 beneficial for longer URL

Differential Revision: https://phabricator.services.mozilla.com/D66862

UltraBlame original commit: 9f58bd341b2f53ac6f692586991a2659240d0a0c

--- a/devtools/client/netmonitor/src/assets/styles/RequestBlockingPanel.css
+++ b/devtools/client/netmonitor/src/assets/styles/RequestBlockingPanel.css
@@ -2,10 +2,12 @@
 
 
 
-.network-monitor .request-blocking-panel {
-  overflow: hidden;
+.request-blocking-panel {
   position: relative;
+  display: flex;
+  flex-direction: column;
   height: 100%;
+  overflow: hidden;
 }
 
 
@@ -39,57 +41,58 @@
 }
 
 
-.network-monitor .request-blocking-enable-bar {
+.request-blocking-enable-bar {
+  flex: none;
   background: var(--theme-tab-toolbar-background);
   height: calc(var(--theme-toolbar-height) + 1px);
   padding-block: 2px;
   padding-inline: 16px 4px;
-  display: flex;
   align-items: center;
   overflow: hidden;
   white-space: nowrap;
   border-bottom: 1px solid var(--theme-splitter-color);
 }
 
-.network-monitor .request-blocking-list.disabled {
-  background-color: var(--theme-toolbar-hover);
-  opacity: 0.6;
-}
-
-.network-monitor .request-blocking-enable-form {
+.request-blocking-enable-form {
   flex-grow: 1;
 }
 
-.network-monitor .request-blocking-enable-bar button::before {
+.request-blocking-enable-bar button::before {
   background-image: url("chrome://devtools/skin/images/add.svg");
 }
 
 .request-blocking-contents {
-  position: absolute;
-  bottom: 0;
-  top: calc(var(--theme-toolbar-height) + 1px);
-  inset-inline: 0;
+  flex: 0 1 auto;
   overflow-y: auto;
+  border-bottom: 1px solid var(--theme-splitter-color);
 }
 
 
-.network-monitor .request-blocking-list {
+.request-blocking-list {
   margin: 0;
   padding: 4px 0;
-  width: 100%;
 }
 
-.network-monitor .request-blocking-list li {
+.request-blocking-list.disabled {
+  background-color: var(--theme-toolbar-hover);
+  opacity: 0.6;
+}
+
+.request-blocking-list li {
   display: flex;
   align-items: center;
   min-height: 20px;
   padding-inline: 16px 8px;
 }
 
-.network-monitor .request-blocking-list li.request-blocking-edit-item {
+.request-blocking-list li.request-blocking-edit-item {
   padding: 0;
   
   margin-block: -2px;
+}
+
+.request-blocking-list li.request-blocking-edit-item form {
+  width: 100%;
 }
 
 .request-blocking-list .devtools-checkbox-label {
@@ -99,7 +102,6 @@
 
 
   max-width: calc(100% - 20px);
-  font-family: var(--monospace-font-family);
 }
 
 .request-blocking-remove-button {
@@ -143,18 +145,25 @@
 }
 
 
-.request-blocking-edit-item form {
-  width: 100%;
+
+
+.request-blocking-footer {
+  position: relative;
+  flex: none;
 }
 
-.request-blocking-add-form {
-  border-top: 1px solid var(--theme-splitter-color);
+
+
+
+.request-blocking-footer::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 100%;
   border-bottom: 1px solid var(--theme-splitter-color);
 }
 
-.request-blocking-add-form:first-child {
-  border-top: none;
-}
 
 .request-blocking-add-form input,
 .request-blocking-edit-item input {
